finished extra pages

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -32,7 +32,7 @@
     </div>
 </div>
 
-<div class='jumbotron mt-3 text-light p-4' style='background-color:#b3b3b3;'>
+<div class='jumbotron mt-3 text-light bg-lightgray p-4'>
     <div class='container text-center brand-logo'>
         <p>500+ companies use TechCompany software every day</p>
         <hr class='text-light'>
