--- a/Pages/pricing.cshtml
+++ b/Pages/pricing.cshtml
@@ -4,7 +4,76 @@
     ViewData["Title"] = "Pricing";
 }
 
-
+<div class='jumbotron p-5'>
     <div class='container'>
-        awegaw
+        <p class='display-4 text-center fw-bold'>Pricing tiers for every business</p>
+        <p class='lead text-center'>
+            We're flexible, just like you.
+        </p>
+        <div class='row mt-5'>
+            <div class='col-lg mb-3 mb-lg-0 d-flex align-items-stretch'>
+                <div class='card shadow'>
+                    <div class='card-body'>
+                        <h3 class='card-title'>Small Business</h3>
+                        <h6 class='card-title text-primary'>From $15/mo</h6>
+                        <hr>
+                        <div class="d-grid gap-2 mb-3">
+                            <button class="btn btn-primary" type="button">Add to Cart</button>
+                        </div>
+                        <p class='card-text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <ul class='card-text text-primary'>
+                            <li>How great is this feature</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class='col-lg mb-3 mb-lg-0 d-flex align-items-stretch'>
+                <div class='card shadow'>
+                    <div class='card-body'>
+                        <h3 class='card-title'>Business</h3>
+                        <h6 class='card-title text-primary'>From $50/mo</h6>
+                        <hr>
+                        <div class="d-grid gap-2 mb-3">
+                            <button class="btn btn-primary" type="button">Add to Cart</button>
+                        </div>
+                        <p class='card-text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <ul class='card-text text-primary'>
+                            <li>How great is this feature</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class='col-lg'>
+                <div class='card shadow'>
+                    <div class='card-body'>
+                        <h3 class='card-title'>Enterprise</h3>
+                        <h6 class='card-title text-primary'>Request a quote</h6>
+                        <hr>
+                        <div class="d-grid gap-2 mb-3">
+                            <button class="btn btn-primary" type="button">Contact Sales</button>
+                        </div>
+                        <p class='card-text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <ul class='card-text text-primary mb-4'>
+                            <li>How great is this feature</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                            <li>Imagine having this feature</li>
+                            <li>This thing is really cool</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+</div>
