--- a/Pages/products.cshtml
+++ b/Pages/products.cshtml
@@ -3,13 +3,66 @@
 @{
     ViewData["Title"] = "Products";
 }
-<div class='jumbotron p-3'>
+
+<div class='jumbotron bg-dark text-light p-5'>
     <div class='container'>
-        <p class='display-3 fw-bold'>Products</p>
+        <p class='display-3 fw-bold'>Solutions for <span class='text-primary'>every</span> size business</p>
+        <p class='lead'>From startups to Fortune 50 companies, TechCompany software will get you where you need to go.</p>
     </div>
 </div>
 <div class='container'>
-    <div class='card shadow'>
-        GUY IT
+    <div class='pb-5'>
+    <div class='row mt-5'>
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-app-indicator"></i>
+                Product 1
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div>
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-bank"></i>
+                Product 2
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-bag-check"></i>
+                Product 3
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div> 
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-box"></i>
+                Product 4
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-currency-exchange"></i>
+                Product 5
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div> 
+        <div class='col px-5 py-4'>
+            <h2 class='text-primary'>
+                <i class="bi bi-envelope-check"></i>
+                Product 6
+            </h2>
+            <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        </div>
+    </div>
+    <div class='text-center mt-3'>
+        <button class='btn btn-primary'>Request a Quote</button>
+    </div>
+    
     </div>
 </div>  
