--- a/Pages/about.cshtml
+++ b/Pages/about.cshtml
@@ -4,6 +4,85 @@
     ViewData["Title"] = "About Us";
 }
 
-<div class='jumbotron bg-secondary'>
-    dogs
+<div class='jumbotron p-5 bg-lightgray'>
+    <div class='container text-light'>
+        <p class='display-4 fw-bold'>Who are we?</p>
+        <p class='lead'>
+            Since 2008, we've been a small group of developers and professionals working to make your business a better place.
+        </p>
+    </div>
+</div>
+<div class='jumbotron p-5'>
+    <div class='container'>
+        <p class='display-4 fw-bold'>Why choose us?</p>
+        <div class='row mt-5'>
+            <div class='col'>
+                <div class='card bg-primary text-light'>
+                    <div class='card-body'>
+                        <h2 class='card-title fw-bold'>
+                            Professionalism
+                        </h2>
+                        <hr>
+                        <p class='card-text'>
+                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class='col'>
+                <div class='card bg-primary text-light'>
+                    <div class='card-body'>
+                        <h2 class='card-title fw-bold'>
+                            Impact
+                        </h2>
+                        <hr>
+                        <p class='card-text'>
+                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class='col'>
+                <div class='card bg-primary text-light'>
+                    <div class='card-body'>
+                        <h2 class='card-title fw-bold'>
+                            People-focused
+                        </h2>
+                        <hr>
+                        <p class='card-text'>
+                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class='jumbotron p-5 bg-secondary bg-gradient'>
+    <div class='container text-light'>
+        <p class='display-4 fw-bold'>Our story</p>
+        <p class='lead'>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+</div>
+<div class='jumbotron p-5'>
+    <div class='container'>
+        <p class='display-4 fw-bold text-primary'>Contact Us</p>
+
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+            <textarea class="form-control" placeholder="Tell us what you're feeling." rows="3"></textarea>
+        </div>
+        <button class='btn btn-primary'>Submit</button>
+    </div>
 </div>
